   * Event pair objects can now be modified - set high, set low
   * Semaphore objects can now be modified - acquire, release
 * FIXED:
   * #2795871 - "Hidden Processes window resizing problem"
   * #2800710 - "System.ObjectDisposedException"
   * Windows 7 RC BSOD (Windows 7 Beta is no longer supported) at
     startup; support is STILL EXPERIMENTAL
   * Memory search addresses being in decimal

1.3.8.0
 * NEW/IMPROVED:
   * KProcessHacker can now perform process memory reading/writing 
     by itself and does not require MmCopyVirtualMemory
   * KProcessHacker can now bypass all handle-opening protections
   * Experimental process protection feature
   * Ability to set handle flags such as protect-from-close and inherit
   * Better highlighting
   * Terminator test: TD1 (debugs a process and closes the debug object)
   * Terminator test: TT3 (TT1 is now completely user-mode)
   * Shows function file and line numbers where available
   * Icon updating is now done on the shared thread to avoid the GUI 
     blocking when explorer.exe is suspended or is hanging
 * FIXED:
   * #2785648 - "cursor down crashes PH"
   * #2790404 - "System.InvalidOperationException"
   * Incomplete or inaccurate thread call stacks
   * Windows 7 BSOD
   * Crash upon executing terminator test M1
   * Unexpected actions being performed when a key was pressed in 
     the memory and handle lists
   * Changed I/O tray icon tooltip from ROW to RWO
   * Corrupted usernames
   * .NET processes getting recognized as packed
   * Start times like "20 centuries ago"
   * Unable to change service configurations
   * "Access denied" when changing DEP status or unloading a module 
     on Windows XP

1.3.7.5
 * NEW/IMPROVED:
   * #2780260 - "add <Enter> key to open Proc Properties"
   * #2780277 - "add <ENTER> to shortcut list for default action"
   * #2781625 - "System Idle Process should not have network connections"
   * #2784954 - "Ctrl+F find DLLs and not just Handles"