@@ -18,6 +18,8 @@ Process Hacker
    * Windows 7 RC BSOD (Windows 7 Beta is no longer supported) at
      startup; support is STILL EXPERIMENTAL
    * Memory search addresses being in decimal
+   * Disabling "Warn about dangerous actions" now disables all 
+     process-related prompts
 
 1.3.8.0
  * NEW/IMPROVED:
